Add multiplatform image build support
Signed-off-by: Matej Feder <matej.feder@dnation.cloud>

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,7 @@
-FROM golang:1.21 as builder
+FROM --platform=${BUILDPLATFORM} golang:1.21 as builder
+
+ARG TARGETOS
+ARG TARGETARCH
 
 WORKDIR /build
 COPY go.mod go.mod
@@ -8,10 +11,11 @@ COPY pkg/ pkg/
 COPY templates/ templates/
 COPY main.go main.go
 RUN ls -lt 
-RUN go build -a -o zuul-mqtt-matrix-bridge main.go
+RUN CGO_ENABLED=0 GOOS=${TARGETOS} GOARCH=${TARGETARCH} go build -a -o zuul-mqtt-matrix-bridge main.go
 
-FROM gcr.io/distroless/static:nonroot
+FROM --platform=${TARGETPLATFORM} scratch
 WORKDIR /
+COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 COPY --from=builder /build/zuul-mqtt-matrix-bridge .
 COPY --from=builder /build/templates /templates
 
